compiler/examples/test_if.expected
Error when node properties have been checked:
examples/test_if.mls:6:3-35: assigned expression with type int to variable a(2) with type bool
